Athena_Widget/include/Xm/in_Arbeit/Xm.pp


    { 16-bit text.  }
    { was #define dname def_expr }
    function XmFMT_16_BIT : TXmTextFormat;      

    { For backwards compatibility only. }
    const
      FMT8BIT = XmFMT_8_BIT;      
    { For backwards compatibility only. }
      FMT16BIT = XmFMT_16_BIT;      
    type
      PXmTextScanType = ^TXmTextScanType;
      TXmTextScanType =  Longint;
      Const
        XmSELECT_POSITION = 0;
        XmSELECT_WHITESPACE = 1;
        XmSELECT_WORD = 2;
        XmSELECT_LINE = 3;
        XmSELECT_ALL = 4;
        XmSELECT_PARAGRAPH = 5;
        XmSELECT_OUT_LINE = 6;
;
    type
      PXmHighlightMode = ^TXmHighlightMode;
      TXmHighlightMode =  Longint;
      Const
        XmHIGHLIGHT_NORMAL = 0;
        XmHIGHLIGHT_SELECTED = 1;
        XmHIGHLIGHT_SECONDARY_SELECTED = 2;
        XmSEE_DETAIL = 3;
;
    { XmTextBlock's are used to pass text around.  }
    { Pointer to data.  }
    { Number of bytes of data.  }
    { Representations format  }
    type
      PXmTextBlockRec = ^TXmTextBlockRec;
      TXmTextBlockRec = record
          ptr : Pchar;
          length : longint;
          format : TXmTextFormat;
        end;
      TXmTextBlock = PXmTextBlockRec;
      PXmTextBlock = ^TXmTextBlock;

      PXmTextVerifyCallbackStruct = ^TXmTextVerifyCallbackStruct;
      TXmTextVerifyCallbackStruct = record
          reason : longint;
          event : PXEvent;
          doit : TBoolean;
          currInsert : longint;
          newInsert : longint;
          startPos : longint;
          endPos : longint;
          text : TXmTextBlock;
        end;
      TXmTextVerifyPtr = PXmTextVerifyCallbackStruct;
      PXmTextVerifyPtr = ^TXmTextVerifyPtr;
    { XmTextBlockWcs's are used in 1.2 modifyVerifyWcs callbacks for Text[Field]
     * widgets.  }
    { Pointer to data.  }
    { Number of characters (not bytes) of data.  }

      PXmTextBlockRecWcs = ^TXmTextBlockRecWcs;
      TXmTextBlockRecWcs = record
          wcsptr : Pwchar_t;
          length : longint;
        end;
      TXmTextBlockWcs = PXmTextBlockRecWcs;
      PXmTextBlockWcs = ^TXmTextBlockWcs;

      PXmTextVerifyCallbackStructWcs = ^TXmTextVerifyCallbackStructWcs;
      TXmTextVerifyCallbackStructWcs = record
          reason : longint;
          event : PXEvent;
          doit : TBoolean;
          currInsert : longint;
          newInsert : longint;
          startPos : longint;
          endPos : longint;
          text : TXmTextBlockWcs;
        end;
      TXmTextVerifyPtrWcs = PXmTextVerifyCallbackStructWcs;
      PXmTextVerifyPtrWcs = ^TXmTextVerifyPtrWcs;
    { functions renamed after 1.0 release due to resource name overlap  }

    const
      XmTextGetTopPosition = XmTextGetTopCharacter;      
      XmTextSetTopPosition = XmTextSetTopCharacter;      
      XmCOPY_FAILED = 0;      
      XmCOPY_SUCCEEDED = 1;      
      XmCOPY_TRUNCATED = 2;      
    {***********************************************************************
     *									*
     *  DIALOG defines..  BulletinBoard and things common to its subclasses *
     *          CommandBox    MessageBox    Selection    FileSelection      *
     *									*
     *********************************************************************** }
    { child type defines for Xm...GetChild()  }
(* error 
enum{	XmDIALOG_NONE,			XmDIALOG_APPLY_BUTTON,
in declaration at line 1236 *)
      XmDIALOG_HISTORY_LIST = XmDIALOG_LIST;      
      XmDIALOG_PROMPT_LABEL = XmDIALOG_SELECTION_LABEL;      
      XmDIALOG_VALUE_TEXT = XmDIALOG_TEXT;      
      XmDIALOG_COMMAND_TEXT = XmDIALOG_TEXT;      
      XmDIALOG_FILE_LIST = XmDIALOG_LIST;      
      XmDIALOG_FILE_LIST_LABEL = XmDIALOG_LIST_LABEL;      
    {  dialog style defines   }
(* error 
enum{	XmDIALOG_MODELESS,		XmDIALOG_PRIMARY_APPLICATION_MODAL,
in declaration at line 1249 *)
    { The following is for compatibility only. Its use is deprecated.
      }
      XmDIALOG_APPLICATION_MODAL = XmDIALOG_PRIMARY_APPLICATION_MODAL;      
    {***********************************************************************
     * XmSelectionBox, XmFileSelectionBox and XmCommand - misc. stuff       *
     ********************************************************************** }
    { Defines for Selection child placement
     }
(* error 
enum{	XmPLACE_TOP,			XmPLACE_ABOVE_SELECTION,
in declaration at line 1263 *)
    { Defines for file type mask:
     }
      XmFILE_DIRECTORY = 1 shl 0;      
      XmFILE_REGULAR = 1 shl 1;      
      XmFILE_ANY_TYPE = XmFILE_DIRECTORY or XmFILE_REGULAR;      
    { Defines for selection dialog type:
     }
(* error 
enum{	XmDIALOG_WORK_AREA,		XmDIALOG_PROMPT,
in declaration at line 1276 *)
    {***********************************************************************
     *  XmMessageBox           stuff not common to other dialogs            *
     ********************************************************************** }
    { defines for dialog type  }
(* error 
enum{	XmDIALOG_TEMPLATE,		XmDIALOG_ERROR,
in declaration at line 1288 *)
    {  Traversal types   }
    type
      PXmVisibility = ^TXmVisibility;
      TXmVisibility =  Longint;
      Const
        XmVISIBILITY_UNOBSCURED = 0;
        XmVISIBILITY_PARTIALLY_OBSCURED = 1;
        XmVISIBILITY_FULLY_OBSCURED = 2;
;
    type
      PXmTraversalDirection = ^TXmTraversalDirection;
      TXmTraversalDirection =  Longint;
      Const
        XmTRAVERSE_CURRENT = 0;
        XmTRAVERSE_NEXT = 1;
        XmTRAVERSE_PREV = 2;
        XmTRAVERSE_HOME = 3;
        XmTRAVERSE_NEXT_TAB_GROUP = 4;
        XmTRAVERSE_PREV_TAB_GROUP = 5;
        XmTRAVERSE_UP = 6;
        XmTRAVERSE_DOWN = 7;
        XmTRAVERSE_LEFT = 8;
        XmTRAVERSE_RIGHT = 9;
        XmTRAVERSE_GLOBALLY_FORWARD = 10;
        XmTRAVERSE_GLOBALLY_BACKWARD = 11;
;
    type
      PXmTraverseObscuredCallbackStruct = ^TXmTraverseObscuredCallbackStruct;
      TXmTraverseObscuredCallbackStruct = record
          reason : longint;
          event : PXEvent;
          traversal_destination : TWidget;
          direction : TXmTraversalDirection;
        end;

      PXmNavigationType = ^TXmNavigationType;
      TXmNavigationType = byte;
    {**********************************************************************
     *
     * SimpleMenu declarations and definitions.
     *
     ********************************************************************** }

      PXmButtonType = ^TXmButtonType;
      TXmButtonType = byte;

      PXmButtonTypeTable = ^TXmButtonTypeTable;
      TXmButtonTypeTable = PXmButtonType;

      PXmKeySymTable = ^TXmKeySymTable;
      TXmKeySymTable = PKeySym;

      PXmStringCharSetTable = ^TXmStringCharSetTable;
      TXmStringCharSetTable = PXmStringCharSet;
(* error 
enum{	XmPUSHBUTTON = 1,		XmTOGGLEBUTTON,
in declaration at line 1332 *)

    const
      XmCHECKBUTTON = XmTOGGLEBUTTON;      
    {**********************************************************************
     *
     * BitmapConversionModel
     *
     ********************************************************************** }
(* error 
enum{	XmMATCH_DEPTH, XmDYNAMIC_DEPTH } ;
in declaration at line 1342 *)
    {***********************************************************************
     *  PrintShell defines
     *********************************************************************** }
(* error 
enum { XmPDM_NOTIFY_FAIL, XmPDM_NOTIFY_SUCCESS } ;
in declaration at line 1349 *)
    {***********************************************************************
     *  MultiList defines
     *********************************************************************** }
(* error 
enum { XmMULTILIST_FOUND, XmMULTILIST_NOT_FOUND };
in declaration at line 1355 *)
    {***********************************************************************
     *  DropDown defines
     *********************************************************************** }
(* error 
enum {
in declaration at line 1366 *)
    { This one cannot be put at the beginning because it needs 
       XmStringTable  }
{$include <Xm/TxtPropCv.h>}
    {*******    BaseClass.c    ******* }
    type

      TXmResourceBaseProc = function (para1:TWidget; para2:TXtPointer):TXtPointer;cdecl;

      PXmSecondaryResourceDataRec = ^TXmSecondaryResourceDataRec;
      TXmSecondaryResourceDataRec = record
          base_proc : TXmResourceBaseProc;
          client_data : TXtPointer;
          name : TString;
          res_class : TString;
          resources : TXtResourceList;
          num_resources : TCardinal;
        end;
      TXmSecondaryResourceData = PXmSecondaryResourceDataRec;
      PXmSecondaryResourceData = ^TXmSecondaryResourceData;
    {*******    Public Function Declarations for BaseClass.c    ******* }

function XmGetSecondaryResourceData(w_class:TWidgetClass; secondaryDataRtn:PPXmSecondaryResourceData):TCardinal;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for ImageCache.c    ******* }
function XmInstallImage(image:PXImage; image_name:Pchar):TBoolean;cdecl;external;
function XmUninstallImage(image:PXImage):TBoolean;cdecl;external;
function XmGetPixmap(screen:PScreen; image_name:Pchar; foreground:TPixel; background:TPixel):TPixmap;cdecl;external;
function XmGetPixmapByDepth(screen:PScreen; image_name:Pchar; foreground:TPixel; background:TPixel; depth:longint):TPixmap;cdecl;external;
function XmDestroyPixmap(screen:PScreen; pixmap:TPixmap):TBoolean;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for Resolve.c    ******* }
    {-- XmeResolvePartOffsets is defined in XmP.h.
         These also belong there but for source compatibility, we let 
         them here ---  }
    type
      PXmOffset = ^TXmOffset;
      TXmOffset = longint;

      PXmOffsetPtr = ^TXmOffsetPtr;
      TXmOffsetPtr = PXmOffset;

procedure XmResolveAllPartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr; constraint_offset:PXmOffsetPtr);cdecl;external;
procedure XmResolvePartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr);cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for Xm.c    ******* }
procedure XmUpdateDisplay(w:TWidget);cdecl;external;
function XmObjectAtPoint(wid:TWidget; x:TPosition; y:TPosition):TWidget;cdecl;external;
function XmWidgetGetBaselines(wid:TWidget; baselines:PPDimension; line_count:Plongint):TBoolean;cdecl;external;
function XmWidgetGetDisplayRect(wid:TWidget; displayrect:PXRectangle):TBoolean;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Primitive.c    ******* }
    {*******    Public Function Declarations for Primitive.c    ******* }
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for ResConvert.c    ******* }
procedure XmCvtStringToUnitType(args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue);cdecl;external;
function XmRegisterSegmentEncoding(fontlist_tag:Pchar; ct_encoding:Pchar):Pchar;cdecl;external;
function XmMapSegmentEncoding(fontlist_tag:Pchar):Pchar;cdecl;external;
function XmCvtCTToXmString(text:Pchar):TXmString;cdecl;external;
function XmCvtTextToXmString(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
               converter_data:PXtPointer):TBoolean;cdecl;external;
function XmCvtXmStringToCT(_string:TXmString):Pchar;cdecl;external;
function XmCvtXmStringToText(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
               converter_data:PXtPointer):TBoolean;cdecl;external;
{$ifdef UTF8_SUPPORTED}
function XmCvtXmStringToUTF8String(_string:TXmString):Pchar;cdecl;external;
{$endif}
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for ResInd.c    ******* }
